# hsansible

./: .gitignore  ChangeLog.md  LICENSE  README.md  hsansible.cabal  stack-lts-11.yaml  stack-lts-6.yaml
data/: ansible-module-template.py  ansible-module.st  hsansible-test-module.yaml
doc/: make-ansible-module.1.md  test-ansible-module.1.md
examples/: cabal.hs
examples/playbooks/: install-hsansible-on-debian-and-ubuntu.yaml
src/: Ansible.hs  hsansible-test-module.hs  make-ansible-module.hs  test-ansible-module.hs
src/Ansible/: Arguments.hs  Failure.hs
test/: TestCase.hs  unit-tests-main.hs  unit-tests.hs
test/Test/Ansible/: Arguments.hs
test/TestCase/Ansible/: Arguments.hs
tools/: generate-man-pages.sh  sandbox-install.sh
